--- a/html/postslist.html
+++ b/html/postslist.html
@@ -1,130 +1,366 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <!-- Font Awesome  -->
+    <!--Include Google Fonts -->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Satisfy|Roboto|Marck+Script&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="http://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"
+      type="text/css"
+      media="screen"
+    />
+    <link rel="stylesheet" type="text/css" href="../styles/common.css" />
+    <link rel="stylesheet" type="text/css" href="../styles/postlist.css" />
+    <link rel="stylesheet" type="text/css" href="../styles/post.css" />
+  </head>
 
-<head>
-    <!-- TODO: Include Font Awesome file here -->
-    <!-- TODO: Include Google Fonts file here -->
-</head>
+  <body>
+    <!-- code for header  -->
+    <div class="header">
+      <div class="bg-signin">
+        <button
+          type="button"
+          class="signinbutton"
+          data-toggle="modal"
+          data-target="#exModal"
+          id="sign-in-button"
+        >
+          Sign In
+        </button>
 
-<body>
-    <!-- TODO: Include code for header here -->
+        <button
+          type="button"
+          class="signinbutton"
+          data-toggle="modal"
+          data-target="#exModalSignUp"
+          id="sign-up-button"
+        >
+          Sign Up
+        </button>
+      </div>
+
+      <a id="pageHeading" class="logo-title" a href="../index.html"
+        >ScriBBler</a
+      >
+      <p class="smaller-heading">Explore, Imagine, Create</p>
+      <!-- Modal -->
+      <div
+        class="modal fade"
+        id="exModal"
+        tabindex="-1"
+        role="dialog"
+        aria-labelledby="exModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4
+                class="modal-title"
+                id="exModalLabel"
+                style="
+                  color: grey;
+                  font-family: 'Roboto', sans-serif;
+                  font-size: larger;
+                "
+              >
+                Welcome Back !
+              </h4>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <form>
+                <div class="form-grouper">
+                  <label for="exInputUsername">Username</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="InputUsername"
+                    aria-describedby="usernameHelpp"
+                    placeholder="Enter your username!!!"
+                    style="background-color: #dcdcdc"
+                    required
+                  />
+                </div>
+                <div class="form-grouper">
+                  <label for="exampleInputPassword1">Password</label>
+                  <input
+                    type="password"
+                    class="form-control"
+                    id="exInputPassword1"
+                    placeholder="Enter your password!!!"
+                    style="background-color: #dcdcdc"
+                    required
+                  />
+                </div>
+                <div class="modal-signin-container">
+                  <button type="submit" class="btn btn-success btn-block">
+                    Sign In
+                  </button>
+                </div>
+                <div
+                  class="modal-footer border-top-0 d-flex justify-content-center"
+                >
+                  Not a member ?
+                  <a
+                    data-target="#exModalSignUp"
+                    data-dismiss="modal"
+                    data-toggle="modal"
+                    href="#signup-form"
+                  >
+                    Sign Up</a
+                  >
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Modal -->
+      <div
+        class="modal fade"
+        id="exModalSignUp"
+        tabindex="-1"
+        role="dialog"
+        aria-labelledby="exModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4
+                class="modal-title"
+                id="exModalLabel"
+                style="
+                  color: grey;
+                  font-family: 'Roboto', sans-serif;
+                  font-size: larger;
+                "
+              >
+                Get Started
+              </h4>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <form>
+                <div class="form-grouper">
+                  <label for="name">Name</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="name"
+                    placeholder="Enter your name!!!"
+                    style="background-color: #dcdcdc"
+                    required
+                  />
+                </div>
+                <div class="form-grouper">
+                  <label for="exInputUsername1">Username</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="exInputUsername1"
+                    aria-describedby="emailHelpp"
+                    placeholder="Enter your username!!!"
+                    style="background-color: #dcdcdc"
+                    required
+                  />
+                </div>
+                <div class="form-grouper">
+                  <label for="exInputPassword1">Password</label>
+                  <input
+                    type="password"
+                    class="form-control"
+                    id="exampleInputPassword1"
+                    placeholder="Enter your password!!!"
+                    style="background-color: #dcdcdc"
+                    required
+                  />
+                </div>
+                <div class="form-grouper">
+                  <label for="exInputPassword1">Confirm Password</label>
+                  <input
+                    type="password"
+                    class="form-control"
+                    id="exampleInputPassword2"
+                    placeholder="Re-enter your Password!!!"
+                    style="background-color: #dcdcdc"
+                    required
+                  />
+                </div>
+
+                <div class="modal-signin-container">
+                  <button type="submit" class="btn btn-success btn-block">
+                    Sign Up
+                  </button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- ATTENTION: The HTML code for the list of posts has been given to you. You can feel free to add/delete/modify this code. You need to write the proper CSS and JavaScript code corresponding to this page so that the result looks like the screenshots given to you in the Project Statement. -->
 
     <!-- list of all posts starts here -->
     <div>
-
-        <!-- post 1 starts here -->
+      <!-- post 1 starts here -->
+      <div>
         <div>
-            <div>
-                <p>Srishti Gupta</p>
-            </div>
-
-            <div>
-                <div>
-                    <p>‘let’ me be a ‘const’(ant), not a ‘var’(iable)!</p>
-                    <span>
-                        <!-- TODO: Include Font Awesome icon for delete icon here -->
-                    </span>
-                </div>
-                <p>Since JavaScript does not have any type-checking, either of these keywords can be used to declare a variable of any type (datatype) in JavaScript. Though all the three keywords are used for the same purpose, they are different.</p>
-                <span>
-                    <!-- TODO: Include Font Awesome icon for horizontal ellipsis icon here -->
-                </span>
-            </div>
+          <p>Srishti Gupta</p>
         </div>
-        <!-- post 1 ends here -->
 
-        <!-- post 2 starts here -->
         <div>
-            <div>
-                <p>Colby Fayock</p>
-            </div>
-
-            <div>
-                <div>
-                    <p>What is linting and how can it save you time?</p>
-                    <span>
-                        <!-- TODO: Include Font Awesome icon for delete icon here -->
-                    </span>
-                </div>
-                <p>One of the biggest challenges in software development is time. It’s something we can’t easily get more of, but linting can help us make the most out of the time we have.</p>
-                <span>
-                    <!-- TODO: Include Font Awesome icon for horizontal ellipsis icon here -->
-                </span>
-            </div>
+          <div>
+            <p>‘let’ me be a ‘const’(ant), not a ‘var’(iable)!</p>
+            <span>
+              <!-- TODO: Include Font Awesome icon for delete icon here -->
+            </span>
+          </div>
+          <p>
+            Since JavaScript does not have any type-checking, either of these
+            keywords can be used to declare a variable of any type (datatype) in
+            JavaScript. Though all the three keywords are used for the same
+            purpose, they are different.
+          </p>
+          <span>
+            <!-- TODO: Include Font Awesome icon for horizontal ellipsis icon here -->
+          </span>
         </div>
-        <!-- post 2 ends here -->
+      </div>
+      <!-- post 1 ends here -->
 
-        <!-- post 3 starts here -->
+      <!-- post 2 starts here -->
+      <div>
         <div>
-            <div>
-                <p>Yazeed Bzadough</p>
-            </div>
-
-            <div>
-                <div>
-                    <p>How to Get More Views on Your Tech Blog</p>
-                    <span>
-                        <!-- TODO: Include Font Awesome icon for delete icon here -->
-                    </span>
-                </div>
-                <p>If you're a developer with a Twitter account, you've already seen everyone and their cat start a blog, YouTube channel, or Patreon. We all want to become stars, or at the very least, a recognizable name in the industry.</p>
-                <span>
-                    <!-- TODO: Include Font Awesome icon for horizontal ellipsis icon here -->
-                </span>
-            </div>
+          <p>Colby Fayock</p>
         </div>
-        <!-- post 3 ends here -->
 
-        <!-- post 4 starts here -->
         <div>
-            <div>
-                <p>Cedd Burge</p>
-            </div>
-
-            <div>
-                <div>
-                    <p>How to write easily describable code</p>
-                    <span>
-                        <!-- TODO: Include Font Awesome icon for delete icon here -->
-                    </span>
-                </div>
-                <p>When code is not describable using words, most people have to do some mental mapping to turn it in to words. This wastes mental energy, and you run the risk of getting the mapping wrong. Different people will map to different words, which
-                    leads to confusion when discussing the code.</p>
-                <span>
-                    <!-- TODO: Include Font Awesome icon for horizontal ellipsis icon here -->
-                </span>
-            </div>
+          <div>
+            <p>What is linting and how can it save you time?</p>
+            <span>
+              <!-- TODO: Include Font Awesome icon for delete icon here -->
+            </span>
+          </div>
+          <p>
+            One of the biggest challenges in software development is time. It’s
+            something we can’t easily get more of, but linting can help us make
+            the most out of the time we have.
+          </p>
+          <span>
+            <!-- TODO: Include Font Awesome icon for horizontal ellipsis icon here -->
+          </span>
         </div>
-        <!-- post 4 ends here -->
+      </div>
+      <!-- post 2 ends here -->
 
-        <!-- post 5 starts here -->
+      <!-- post 3 starts here -->
+      <div>
         <div>
-            <div>
-                <p>Srishti Gupta</p>
-            </div>
-
-            <div>
-                <div>
-                    <p>Everything you should know about ‘module’ & ‘require’ in Node.js</p>
-                    <span>
-                        <!-- TODO: Include Font Awesome icon for delete icon here -->
-                    </span>
-                </div>
-                <p>Node.js treats each JavaScript file as a separate module. For instance, if you have a file containing some code and this file is named xyz.js, then this file is treated as a module in Node, and you can say that you’ve created a module
-                    named xyz.</p>
-                <span>
-                    <!-- TODO: Include Font Awesome icon for horizontal ellipsis icon here -->
-                </span>
-            </div>
+          <p>Yazeed Bzadough</p>
         </div>
-        <!-- post 5 ends here -->
 
-        <!-- TODO: Write code for delete post modal here -->
+        <div>
+          <div>
+            <p>How to Get More Views on Your Tech Blog</p>
+            <span>
+              <!-- TODO: Include Font Awesome icon for delete icon here -->
+            </span>
+          </div>
+          <p>
+            If you're a developer with a Twitter account, you've already seen
+            everyone and their cat start a blog, YouTube channel, or Patreon. We
+            all want to become stars, or at the very least, a recognizable name
+            in the industry.
+          </p>
+          <span>
+            <!-- TODO: Include Font Awesome icon for horizontal ellipsis icon here -->
+          </span>
+        </div>
+      </div>
+      <!-- post 3 ends here -->
 
+      <!-- post 4 starts here -->
+      <div>
+        <div>
+          <p>Cedd Burge</p>
+        </div>
+
+        <div>
+          <div>
+            <p>How to write easily describable code</p>
+            <span>
+              <!-- TODO: Include Font Awesome icon for delete icon here -->
+            </span>
+          </div>
+          <p>
+            When code is not describable using words, most people have to do
+            some mental mapping to turn it in to words. This wastes mental
+            energy, and you run the risk of getting the mapping wrong. Different
+            people will map to different words, which leads to confusion when
+            discussing the code.
+          </p>
+          <span>
+            <!-- TODO: Include Font Awesome icon for horizontal ellipsis icon here -->
+          </span>
+        </div>
+      </div>
+      <!-- post 4 ends here -->
+
+      <!-- post 5 starts here -->
+      <div>
+        <div>
+          <p>Srishti Gupta</p>
+        </div>
+
+        <div>
+          <div>
+            <p>
+              Everything you should know about ‘module’ & ‘require’ in Node.js
+            </p>
+            <span>
+              <!-- TODO: Include Font Awesome icon for delete icon here -->
+            </span>
+          </div>
+          <p>
+            Node.js treats each JavaScript file as a separate module. For
+            instance, if you have a file containing some code and this file is
+            named xyz.js, then this file is treated as a module in Node, and you
+            can say that you’ve created a module named xyz.
+          </p>
+          <span>
+            <!-- TODO: Include Font Awesome icon for horizontal ellipsis icon here -->
+          </span>
+        </div>
+      </div>
+      <!-- post 5 ends here -->
+
+      <!-- TODO: Write code for delete post modal here -->
     </div>
     <!-- list of all posts ends here -->
-</body>
-
+  </body>
 </html>
