--- a/index.html
+++ b/index.html
@@ -1,13 +1,248 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
 
-<head>
-    <!-- TODO: Include Font Awesome file here -->
-    <!-- TODO: Include Google Fonts file here -->
-</head>
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montez&display=swap"
+      rel="stylesheet"
+    />
 
-<body>
-    <!-- TODO: Include all your code for the header and home page here -->
-</body>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dosis:wght@200&family=Montez&display=swap"
+      rel="stylesheet"
+    />
 
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
+    <!-- Include css -->
+    <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="stylesheet" href="./styles/common.css" />
+
+    <!-- Bootstrap -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+  </head>
+
+  <body>
+    <div class="header">
+      <div class="signin">
+        <button
+          type="button"
+          class="signinbutton"
+          data-toggle="modal"
+          data-target="#exModal"
+          id="sign-in-button"
+        >
+          Sign In
+        </button>
+        <button
+          type="button"
+          class="signinbutton"
+          data-toggle="modal"
+          data-target="#exModalSignUp"
+          id="sign-up-button"
+        >
+          Sign Up
+        </button>
+      </div>
+      <!--Page Title & logo-->
+      <a id="pageHeading" class="logo-title" a href="./index.html">ScriBBler</a>
+      <p class="smaller-heading">Explore, Imagine, Create</p>
+
+      <!-- Fade Modal-->
+      <div
+        class="modal fade"
+        id="exModal"
+        tabindex="-1"
+        role="dialog"
+        aria-labelledby="exModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4
+                class="modal-title"
+                id="exModalLabel"
+                style="
+                  color: grey;
+                  font-family: 'Roboto', sans-serif;
+                  font-size: larger;
+                "
+              >
+                Welcome Back !!
+              </h4>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <!--Modal Body-->
+            <div class="modal-body">
+              <form>
+                <!--form grouper username sign in-->
+                <div class="form-grouper">
+                  <label for="exUsername">Username</label>
+                  <input
+                    type="text"
+                    placeholder="Enter your username!!!"
+                    class="form-control"
+                    id="exUsername"
+                    style="background-color: #dcdcdcdc"
+                    aria-describedby="usernamehelpp"
+                    required
+                  />
+                </div>
+
+                <!--form grouper password signin -->
+                <div class="form-grouper">
+                  <label for="exPassword1">Password</label>
+                  <input
+                    type="password"
+                    placeholder="Enter your Password!!!"
+                    class="form-control"
+                    id="exPassword1"
+                    style="background-color: #dcdcdcdc"
+                    required
+                  />
+                </div>
+                <div class="modal-signin-container">
+                  <button type="submit" class="btn btn-success btn-block">
+                    Sign-In
+                  </button>
+                </div>
+                <div
+                  class="modal-footer border-top-2 d-flex justify-content-center"
+                >
+                  Not a member ?
+                  <a
+                    data-target="#exModalSignUp"
+                    data-dismiss="modal"
+                    data-toggle="modal"
+                    href="#signup-form"
+                  >
+                    Sign Up</a
+                  >
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Modal fade -->
+      <div
+        class="modal fade"
+        id="exModalSignUp"
+        tabindex="-2"
+        role="dialog"
+        aria-labelledby="exModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4
+                class="modal-title"
+                id="exModalLabel"
+                style="
+                  color: grey;
+                  font-family: 'Roboto', sans-serif;
+                  font-size: larger;
+                "
+              >
+                Get Started!
+              </h4>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <form>
+                <div class="form-grouper">
+                  <!--Name field-->
+                  <label for="name">Name</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="name"
+                    placeholder="Enter your name!!!"
+                    style="background-color: #dcdcdc"
+                    required
+                  />
+                </div>
+                <div class="form-grouper">
+                  <!--UserName field-->
+                  <label for="exInputUsername1">Username</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="exInputUsername1"
+                    aria-describedby="emailHelp"
+                    placeholder="Enter your username!!!"
+                    style="background-color: #dcdcdc"
+                    required
+                  />
+                </div>
+                <div class="form-grouper">
+                  <!--password field-->
+                  <label for="exInputPassword1">Password</label>
+                  <input
+                    type="password"
+                    class="form-control"
+                    id="exInputPassword1"
+                    placeholder="Enter your password!!!"
+                    style="background-color: #dcdcdc"
+                    required
+                  />
+                </div>
+                <div class="form-grouper">
+                  <!--confirm password field-->
+                  <label for="exInputPassword1">Confirm Password</label>
+                  <input
+                    type="password"
+                    class="form-control"
+                    id="exInputPassword2"
+                    placeholder="Re-enter your Password!!!"
+                    style="background-color: #dcdcdc"
+                    required
+                  />
+                </div>
+
+                <div class="modal-signin-container">
+                  <!--submit button-->
+                  <button type="submit" class="btn btn-success btn-block">
+                    Sign Up
+                  </button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
