--- a/html/post.html
+++ b/html/post.html
@@ -1,8 +1,8 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
-    <!-- Font Awesome file-->
+ 
     <!-- Google Fonts file  -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Satisfy|Roboto|Marck+Script&display=swap" rel="stylesheet">
