--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       href="https://fonts.googleapis.com/css2?family=Montez&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap"
+      rel="stylesheet"
+    />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Dosis:wght@200&family=Montez&display=swap"
@@ -38,211 +42,169 @@
   </head>
 
   <body>
-    <div class="header">
-      <div class="signin">
-        <button
-          type="button"
-          class="signinbutton"
-          data-toggle="modal"
-          data-target="#exModal"
-          id="sign-in-button"
-        >
-          Sign In
-        </button>
-        <button
-          type="button"
-          class="signinbutton"
-          data-toggle="modal"
-          data-target="#exModalSignUp"
-          id="sign-up-button"
-        >
-          Sign Up
-        </button>
-      </div>
-      <!--Page Title & logo-->
-      <a id="pageHeading" class="logo-title" a href="./index.html">ScriBBler</a>
-      <p class="smaller-heading">Explore, Imagine, Create</p>
-
-      <!-- Fade Modal-->
-      <div
-        class="modal fade"
-        id="exModal"
-        tabindex="-1"
-        role="dialog"
-        aria-labelledby="exModalLabel"
-        aria-hidden="true"
-      >
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h4
-                class="modal-title"
-                id="exModalLabel"
-                style="
-                  color: grey;
-                  font-family: 'Roboto', sans-serif;
-                  font-size: larger;
-                "
-              >
-                Welcome Back !!
-              </h4>
-              <button
-                type="button"
-                class="close"
-                data-dismiss="modal"
-                aria-label="Close"
-              >
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <!--Modal Body-->
-            <div class="modal-body">
-              <form>
-                <!--form grouper username sign in-->
-                <div class="form-grouper">
-                  <label for="exUsername">Username</label>
-                  <input
-                    type="text"
-                    placeholder="Enter your username!!!"
-                    class="form-control"
-                    id="exUsername"
-                    style="background-color: #dcdcdcdc"
-                    aria-describedby="usernamehelpp"
-                    required
-                  />
-                </div>
-
-                <!--form grouper password signin -->
-                <div class="form-grouper">
-                  <label for="exPassword1">Password</label>
-                  <input
-                    type="password"
-                    placeholder="Enter your Password!!!"
-                    class="form-control"
-                    id="exPassword1"
-                    style="background-color: #dcdcdcdc"
-                    required
-                  />
-                </div>
-                <div class="modal-signin-container">
-                  <button type="submit" class="btn btn-success btn-block">
-                    Sign-In
-                  </button>
-                </div>
-                <div
-                  class="modal-footer border-top-2 d-flex justify-content-center"
-                >
-                  Not a member ?
-                  <a
-                    data-target="#exModalSignUp"
-                    data-dismiss="modal"
-                    data-toggle="modal"
-                    href="#signup-form"
-                  >
-                    Sign Up</a
-                  >
-                </div>
-              </form>
-            </div>
-          </div>
+    <div id="main-container-div">
+      <!-- Insert code for Sign Up, Sign In button here. Add code for "ScriBBler" heading and the sub-heading -->
+      <div class="header">
+        <div class="title-container">
+          <p class="title">ScriBBler</p>
+          <p class="sub-title">Explore, Imagine, Create</p>
+        </div>
+        <div class="login-buttons-container">
+          <button onclick="showSignUpModal()" class="blue-button" type="button">
+            Sign Up
+          </button>
+          <button onclick="showSignInModal()" class="blue-button" type="button">
+            Sign In
+          </button>
         </div>
       </div>
 
-      <!-- Modal fade -->
-      <div
-        class="modal fade"
-        id="exModalSignUp"
-        tabindex="-2"
-        role="dialog"
-        aria-labelledby="exModalLabel"
-        aria-hidden="true"
-      >
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h4
-                class="modal-title"
-                id="exModalLabel"
-                style="
-                  color: grey;
-                  font-family: 'Roboto', sans-serif;
-                  font-size: larger;
-                "
-              >
-                Get Started!
-              </h4>
-              <button
-                type="button"
-                class="close"
-                data-dismiss="modal"
-                aria-label="Close"
-              >
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <form>
-                <div class="form-grouper">
-                  <!--Name field-->
-                  <label for="name">Name</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="name"
-                    placeholder="Enter your name!!!"
-                    style="background-color: #dcdcdc"
-                    required
-                  />
-                </div>
-                <div class="form-grouper">
-                  <!--UserName field-->
-                  <label for="exInputUsername1">Username</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="exInputUsername1"
-                    aria-describedby="emailHelp"
-                    placeholder="Enter your username!!!"
-                    style="background-color: #dcdcdc"
-                    required
-                  />
-                </div>
-                <div class="form-grouper">
-                  <!--password field-->
-                  <label for="exInputPassword1">Password</label>
-                  <input
-                    type="password"
-                    class="form-control"
-                    id="exInputPassword1"
-                    placeholder="Enter your password!!!"
-                    style="background-color: #dcdcdc"
-                    required
-                  />
-                </div>
-                <div class="form-grouper">
-                  <!--confirm password field-->
-                  <label for="exInputPassword1">Confirm Password</label>
-                  <input
-                    type="password"
-                    class="form-control"
-                    id="exInputPassword2"
-                    placeholder="Re-enter your Password!!!"
-                    style="background-color: #dcdcdc"
-                    required
-                  />
-                </div>
+      <div class="postButtons">
+        <!-- Insert code for All Posts & Create Post button here -->
+        <button
+          onclick="navigateToBlogList()"
+          class="yellow-button"
+          type="button"
+        >
+          All Posts
+        </button>
+        <button onclick="showCreatePost()" class="yellow-button" type="button">
+          Create Post
+        </button>
+      </div>
+    </div>
 
-                <div class="modal-signin-container">
-                  <!--submit button-->
-                  <button type="submit" class="btn btn-success btn-block">
-                    Sign Up
-                  </button>
-                </div>
-              </form>
-            </div>
+    <div>
+      <!-- Insert code for Sign In modal here -->
+      <div class="modal" id="signin-modal">
+        <div class="modal-content">
+          <div class="modal-head">
+            <span onclick="hideSignInModal()" id="close" class="close"
+              >&times;</span
+            >
+            <h2 class="modal-title">Welcome Back!</h2>
           </div>
+          <hr />
+          <form>
+            <label for="username" class="label-text">Username</label>
+            <input
+              type="text"
+              id="username"
+              placeholder="Enter Username"
+              required
+            />
+            <label for="password" class="label-text">Password</label>
+            <input
+              type="password"
+              id="password"
+              placeholder="Enter Password"
+              required
+            />
+            <button
+              type="submit"
+              onclick="signin(username, password)"
+              class="signin-btn"
+            >
+              Sign In
+            </button>
+          </form>
+
+          <p class="bottom-banner">
+            Not a member?<span
+              onclick="hideSignInModal();showSignUpModal()"
+              class="signup"
+              >Sign Up</span
+            >
+          </p>
         </div>
       </div>
     </div>
+
+    <!-- Insert code for Sign Up modal here -->
+    <div>
+      <div class="modal" id="signup-modal">
+        <div class="modal-content">
+          <div class="modal-head">
+            <span onclick="hideSignUpModal()" id="close" class="close"
+              >&times;</span
+            >
+            <h2 class="modal-title">Get Started</h2>
+          </div>
+          <hr />
+          <form>
+            <label for="fullname" class="label-text">Full name</label>
+            <input
+              type="text"
+              id="fullname"
+              placeholder="Enter Full Name"
+              required
+            />
+            <label for="username" class="label-text">Username</label>
+            <input
+              type="text"
+              id="username"
+              placeholder="Enter Username"
+              required
+            />
+            <label for="password" class="label-text">Password</label>
+            <input
+              type="password"
+              id="password"
+              placeholder="Enter Password"
+              required
+            />
+            <label for="confirmpassword" class="label-text"
+              >Confirm Password</label
+            >
+            <input
+              type="password"
+              id="confirm_password"
+              placeholder="Confirm Password"
+              required
+            />
+            <button
+              type="submit"
+              onclick="signup(firstName,lastName, email, password, mobile)"
+              class="signin-btn"
+            >
+              Sign up
+            </button>
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <!-- Insert code for Create Post modal here -->
+      <div class="modal" id="create-post-modal">
+        <div class="post-modal-content">
+          <div class="modal-head">
+            <span onclick="hideCreatePostModal()" id="close" class="close"
+              >&times;</span
+            >
+            <h2 class="modal-title">Pen your post</h2>
+          </div>
+          <form id="create-post-form">
+            <label for="tile" class="label-text">Title</label>
+            <input type="text" id="title" placeholder="" required />
+            <label for="content" class="label-text">Content</label>
+            <textarea
+              cols="50"
+              rows="15"
+              name="post-details"
+              form="create-post-form"
+            ></textarea>
+            <button type="submit" onclick="createPost()" class="create-btn">
+              Create
+            </button>
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <!-- Place all Javascript for header in this file -->
+    <script src="scripts/common.js"></script>
+    <!-- Place all Javascript for rest of the elements in this file -->
+    <script src="scripts/index.js"></script>
   </body>
 </html>
