completing Section B - PostList Page

--- a/index.html
+++ b/index.html
@@ -188,19 +188,29 @@
       <div class="modal" id="create-post-modal">
         <div class="post-modal-content">
           <div class="modal-head">
-            <span onclick="hideCreatePostModal()" id="close" class="close"
-              >&times;</span
-            >
-            <h2 class="modal-title">Pen your post</h2>
+            <span>
+              <i
+                onclick="hideCreatePostModal()"
+                class="fa fa-times"
+                aria-hidden="true"
+              ></i>
+              <h2 class="modal-title">Pen Your Post</h2>
+            </span>
           </div>
           <form id="create-post-form">
             <label for="tile" class="label-text">Title</label>
-            <input type="text" id="title" placeholder="" required />
-            <label for="content" class="label-text">Content</label>
+            <input
+              type="text"
+              id="title"
+              placeholder="Enter title of your post"
+              required
+            />
+            <label for="content" class="label-text">Contents</label>
             <textarea
               cols="50"
               rows="15"
               name="post-details"
+              placeholder="Enter the contents of your post"
               form="create-post-form"
             ></textarea>
             <button type="submit" onclick="createPost()" class="create-btn">
