--- a/html/postslist.html
+++ b/html/postslist.html
@@ -2,10 +2,8 @@
 <html>
   <head>
     <!-- Font Awesome -->
-   <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+    <script src="https://kit.fontawesome.com/af7a46e1ed.js" crossorigin="anonymous"></script>
+<title>Scribbler | Post List</title>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
